<resources>
    <string name="app_name">Robo Controller</string>
    <string name="V">V:</string>
    <string name="undoBtn">undo</string>
    <string name="redoBtn">redo</string>
    <string name="lastTxtViw">last:</string>
    <string name="periodic_ratioTxtViw">Periodic ratio</string>
    <string name="differential_ratioTxtViw">Differential ratio</string>
    <string name="integral_ratioTxtViw">Integral ratio</string>
    <string name="fan">Fan:</string>
    <string name="consoleBtn">Console</string>
    <string name="start_debugBtn">Start debug</string>
    <string name="profilesBtn">Profiles</string>
    <string name="stopBtn">stop</string>
    <string name="upload_dataBtn">Upload data</string>
    <string name="startBtn">start</string>
    <string name="title_activity_console">Console</string>
    <string name="title_activity_profile">Profiles</string>
    <string name="wipMsg">Coming Soon…</string>
    <string name="MaxSpeed">100</string>
    <string name="MinSpeed">1</string>
    <string name="fPeriodTxt">FPeriodic ratio</string>
    <string name="fIntTxt">FIntegral ratio</string>
    <string name="FDifTxt">FDifferential ratio</string>
    <string name="fspeedTxt">FSpeed</string>
    <string name="normaltimeTxt">normalTime</string>
    <string name="returntimeTxt">returnTime</string>
    <string name="turnTxt">Turn</string>
    <string name="stoptimeTxt">stopTime</string>
    <string name="ValuesReadingError">Все поля должны быть заполнены!</string>
</resources>
